templates/jjobs-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jjobs-agent
  labels:
    app: jjobs-agent
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jjobs-agent
  template:
    metadata:
      labels:
        app: jjobs-agent
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: jjobs-agent-container
        image: public.ecr.aws/g7p3s5l4/jjobs:2.10.0-beta
        volumeMounts:
        - mountPath: /logs001/jjobs
          name: jjobs-default-log
      volumes:
      - name: jjobs-default-log
        persistentVolumeClaim:
          claimName: efs-pvc-fargate-ms
