templates/jjobs-agent-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jjobs-agent
  labels:
    app: jjobs-agent
  namespace: default
spec:
  replicas: 2
  serviceName: jjobs-agent
  selector:
    matchLabels:
      app: jjobs-agent
  template:
    metadata:
      labels:
        app: jjobs-agent
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: jjobs-agent-container
        image: ghcr.io/devonlab/jjobs:2.10.0-beta
        volumeMounts:
        - mountPath: /logs001/jjobs
          name: jjobs-default-log
        resources:
          requests:
            memory: "512Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
      - name: jjobs-default-log
        persistentVolumeClaim:
          claimName: efs-pvc-fargate-ms
