templates/jjobs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jjobs
spec:
  replicas: 2
  serviceName: jjobs
  selector:
    matchLabels:
      app.kubernetes.io/name: jjobs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jjobs
    spec:      
      terminationGracePeriodSeconds: 180
      containers:
      - name: jjobs
        image: public.ecr.aws/g7p3s5l4/jjobs:2.10.0-beta
        ports:
        - containerPort: 7065
        - containerPort: 7075
        - containerPort: 17075
        - containerPort: 17076
        - containerPort: 17077
        - containerPort: 17078
        - containerPort: 17079
        volumeMounts:
        - mountPath: /logs001/jjobs
          name: jjobs-logs
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1"
          limits:
            memory: "2048Mi"
            cpu: "2"
      volumes:
      - name: jjobs-logs
        persistentVolumeClaim:
          claimName: efs-pvc-fargate-ms
