templates/jjobs-ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jjobs-web-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: manager-web
      port: 7065
      targetPort: 7065
      protocol: TCP
    - name: server-web
      port: 7075
      targetPort: 7075
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jjobs
---
apiVersion: v1
kind: Service
metadata:
  name: jjobs-tcp1-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: server-tcp-0
      protocol: TCP
      port: 17075
      targetPort: 17075
    - name: server-tcp-1
      protocol: TCP
      port: 17076
      targetPort: 17076
    - name: server-tcp-2
      protocol: TCP
      port: 17077
      targetPort: 17077
    - name: server-tcp-3
      protocol: TCP
      port: 17078
      targetPort: 17078
    - name: server-tcp-4
      protocol: TCP
      port: 17079
      targetPort: 17079
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: jjobs-0
---
apiVersion: v1
kind: Service
metadata:
  name: jjobs-tcp2-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: server-tcp-0
      protocol: TCP
      port: 17075
      targetPort: 17075
    - name: server-tcp-1
      protocol: TCP
      port: 17076
      targetPort: 17076
    - name: server-tcp-2
      protocol: TCP
      port: 17077
      targetPort: 17077
    - name: server-tcp-3
      protocol: TCP
      port: 17078
      targetPort: 17078
    - name: server-tcp-4
      protocol: TCP
      port: 17079
      targetPort: 17079
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: jjobs-1
---
apiVersion: v1
kind: Service
metadata:
  name: jjobs
spec:
  selector:
    app.kubernetes.io/name: jjobs
  type: ClusterIP
  clusterIP: None
  ports:
    - name: server-web
      protocol: TCP
      port: 7075
      targetPort: 7075
