templates/jjobs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jjob-web-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  sessionAffinity: ClientIP
  ports:
    - name: manager-web
      port: 7065
      targetPort: 7065
      protocol: TCP
    - name: server-web
      port: 7075
      targetPort: 7075
      protocol: TCP
    - name: server1-tcp-0
      port: 17075
      targetPort: 17075 
    - name: server1-tcp-1
      port: 17076
      targetPort: 17076
    - name: server1-tcp-2
      port: 17077
      targetPort: 17077
    - name: server1-tcp-3
      port: 17078
      targetPort: 17078
    - name: server1-tcp-4
      port: 17079
      targetPort: 17079
    - name: server2-tcp-0
      port: 27075
      targetPort: 27075 
    - name: server2-tcp-1
      port: 27076
      targetPort: 27076
    - name: server2-tcp-2
      port: 27077
      targetPort: 27077
    - name: server2-tcp-3
      port: 27078
      targetPort: 27078
    - name: server2-tcp-4
      port: 27079
      targetPort: 27079
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jjobs
---
apiVersion: v1
kind: Service
metadata:
  name: jjobs
spec:
  selector:
    app.kubernetes.io/name: jjobs
  type: ClusterIP
  clusterIP: None
  ports:
    - name: server
      protocol: TCP
      port: 7075
      targetPort: 7075
