templates/jjobs-ingress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jjobs
spec:
  replicas: 2
  serviceName: jjobs
  selector:
    matchLabels:
      app: jjobs
  template:
    metadata:
      labels:
        app: jjobs
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: jjobs
        image: ghcr.io/devonlab/jjobs:2.10.0-beta
        ports:
        - containerPort: 7065
        volumeMounts:
        - mountPath: /logs001/jjobs
          name: jjobs-logs
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "1"
  volumeClaimTemplates:
  - metadata:
      name: jjobs-logs
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "efs-provisioner"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jjobs
spec:
  selector:
    app: jjobs
  type: ClusterIP
  clusterIP: None
  ports:
    - name: manager
      protocol: TCP
      port: 7065
      targetPort: 7065
    - name: server
      protocol: TCP
      port: 7075
      targetPort: 7075
    - name: server-tcp-0
      protocol: TCP
      port: 17075
      targetPort: 17075
    - name: server-tcp-1
      protocol: TCP
      port: 17076
      targetPort: 17076
    - name: server-tcp-2
      protocol: TCP
      port: 17077
      targetPort: 17077
    - name: server-tcp-3
      protocol: TCP
      port: 17078
      targetPort: 17078
    - name: server-tcp-4
      protocol: TCP
      port: 17079
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
  name: jjobs-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: jjobs
                port:
                  number: 7065
            path: "/jjob-manager"
            pathType: Prefix
